adjusted the Arch, modified the Main Window, and added the core networking and config components

--- a/.gitignore
+++ b/.gitignore
@@ -4062,3 +4062,5 @@ env/Scripts/python.exe
 env/Scripts/pythonw.exe
 .vscode/settings.json
 GUI/__pycache__/user_login.cpython-37.pyc
+GUI/settingsUI.py
+Core/__pycache__/config.cpython-37.pyc
