updated settings saving mech.

--- a/.gitignore
+++ b/.gitignore
@@ -4062,5 +4062,6 @@ env/Scripts/python.exe
 env/Scripts/pythonw.exe
 .vscode/settings.json
 GUI/__pycache__/user_login.cpython-37.pyc
-GUI/settingsUI.py
 Core/__pycache__/config.cpython-37.pyc
+GUI/__pycache__/settingsUI.cpython-37.pyc
+GUI/__pycache__/settingsUI.cpython-37.pyc
