modified the settings and userlogins

--- a/.gitignore
+++ b/.gitignore
@@ -4065,3 +4065,6 @@ GUI/__pycache__/user_login.cpython-37.pyc
 Core/__pycache__/config.cpython-37.pyc
 GUI/__pycache__/settingsUI.cpython-37.pyc
 GUI/__pycache__/settingsUI.cpython-37.pyc
+GUI/__pycache__/MainWindow.cpython-37.pyc
+GUI/__pycache__/settingsUI.cpython-37.pyc
+GUI/__pycache__
