--- a/Coreapp.config
+++ b/Coreapp.config
@@ -1,1 +1,1 @@
-{"url": "192.168.8.100:3000", "port": "COM1", "examId": 46}
+{"url": "http://192.168.8.101:3000/api/", "port": "COM1", "examId": 39}
