--- a/Coreapp.config
+++ b/Coreapp.config
@@ -1,1 +1,1 @@
-{"url": "http://192.168.8.101:3000/api/", "port": "COM1", "examId": 47}
+{"url": "http://192.168.8.101:3000/api", "port": "COM1", "examId": 47}
